# csicamera

./: CMakeLists.txt  camera  camera.c  camera1.c  camera_display.cpp  csicamera.cpp  csicamera.h  data  data.c  data.py  main.cpp  read.cpp  rtmp.c  semmap.cpp  semmap.h  task2.code-workspace  test.c  test.txt  test.yuv  test1.c  videodisplay.cpp
gstreamer/: baisc-tutorial-7.c  basic-tutorial-2  basic-tutorial-2.c  basic-tutorial-3  basic-tutorial-4  basic-tutorial-4.c  basic-tutorial-6  basic-tutorial-7  gstreamer_demo  gstreamer_demo.c
